--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -2984,35 +2984,36 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Общая статистика" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erU-ie-N5M">
-                                                    <rect key="frame" x="20" y="19.666666666666668" width="262" height="21.000000000000004"/>
+                                                    <rect key="frame" x="20" y="19.666666666666668" width="242" height="21.000000000000004"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LS9-Ua-yzQ">
-                                                    <rect key="frame" x="290" y="13.666666666666664" width="80" height="33"/>
+                                                    <rect key="frame" x="270" y="13.666666666666664" width="100" height="33"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Скрыть" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzi-3U-T9E">
-                                                            <rect key="frame" x="0.0" y="6.3333333333333357" width="57" height="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Показать" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzi-3U-T9E">
+                                                            <rect key="frame" x="7" y="6.3333333333333357" width="70.333333333333329" height="20"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="57" id="6ku-sT-DGL"/>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="57" id="6ku-sT-DGL"/>
                                                                 <constraint firstAttribute="height" constant="20" id="C4c-g7-u6a"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <color key="textColor" systemColor="systemBlueColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GeM-9S-YEd">
-                                                            <rect key="frame" x="60.999999999999993" y="10.999999999999996" width="18.666666666666664" height="10.333333333333336"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="chevron.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GeM-9S-YEd">
+                                                            <rect key="frame" x="81.333333333333314" y="10.999999999999996" width="18.666666666666671" height="10.333333333333336"/>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="33" id="4SU-SI-zNP"/>
                                                         <constraint firstItem="Pzi-3U-T9E" firstAttribute="centerY" secondItem="LS9-Ua-yzQ" secondAttribute="centerY" id="9ZN-JU-bBt"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GeM-9S-YEd" secondAttribute="trailing" id="Gro-hk-apK"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GeM-9S-YEd" secondAttribute="trailing" id="PYu-7W-xf0"/>
                                                         <constraint firstItem="GeM-9S-YEd" firstAttribute="centerY" secondItem="Pzi-3U-T9E" secondAttribute="centerY" id="Rns-ZR-EyN"/>
-                                                        <constraint firstAttribute="width" constant="80" id="WL7-9a-2Nf"/>
+                                                        <constraint firstAttribute="width" constant="100" id="WL7-9a-2Nf"/>
                                                         <constraint firstItem="GeM-9S-YEd" firstAttribute="leading" secondItem="Pzi-3U-T9E" secondAttribute="trailing" constant="4" id="aga-wy-wTS"/>
-                                                        <constraint firstItem="Pzi-3U-T9E" firstAttribute="leading" secondItem="LS9-Ua-yzQ" secondAttribute="leading" id="ikA-jz-uVW"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5TG-3K-F0Z">
