--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -3115,6 +3115,157 @@
             </objects>
             <point key="canvasLocation" x="576.92307692307691" y="3126.5402843601896"/>
         </scene>
+        <!--Client View Controller-->
+        <scene sceneID="3Ey-VJ-6Ki">
+            <objects>
+                <viewController storyboardIdentifier="ClientVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9Tm-Wd-sm6" customClass="ClientViewController" customModule="SadAgregator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="n6y-wC-9Dk">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3hQ-Um-mdE">
+                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="generalInfoCell" rowHeight="60" id="tCf-8b-eM1">
+                                        <rect key="frame" x="0.0" y="28" width="390" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tCf-8b-eM1" id="Xza-Fh-ote">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Общая информация" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Axk-KQ-faa">
+                                                    <rect key="frame" x="20" y="19.666666666666668" width="242" height="21.000000000000004"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BUP-ih-Pa6">
+                                                    <rect key="frame" x="270" y="13.666666666666664" width="100" height="33"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Показать" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGF-DN-17I">
+                                                            <rect key="frame" x="7" y="6.3333333333333357" width="70.333333333333329" height="20"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="57" id="FdV-kq-Foe"/>
+                                                                <constraint firstAttribute="height" constant="20" id="z6k-ZK-nyV"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <color key="textColor" systemColor="systemBlueColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="chevron.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="IuO-p7-20e">
+                                                            <rect key="frame" x="81.333333333333314" y="10.999999999999996" width="18.666666666666671" height="10.333333333333336"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="IuO-p7-20e" firstAttribute="centerY" secondItem="SGF-DN-17I" secondAttribute="centerY" id="6Aa-OE-uEa"/>
+                                                        <constraint firstAttribute="height" constant="33" id="9Im-2A-zXv"/>
+                                                        <constraint firstAttribute="trailing" secondItem="IuO-p7-20e" secondAttribute="trailing" id="STW-p6-Fbq"/>
+                                                        <constraint firstAttribute="width" constant="100" id="cf3-25-JTk"/>
+                                                        <constraint firstAttribute="trailing" secondItem="IuO-p7-20e" secondAttribute="trailing" id="jGk-PZ-wFs"/>
+                                                        <constraint firstItem="SGF-DN-17I" firstAttribute="centerY" secondItem="BUP-ih-Pa6" secondAttribute="centerY" id="sY2-1N-0pk"/>
+                                                        <constraint firstItem="IuO-p7-20e" firstAttribute="leading" secondItem="SGF-DN-17I" secondAttribute="trailing" constant="4" id="vz3-fS-TZc"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hli-xi-EpC">
+                                                    <rect key="frame" x="0.0" y="58" width="390" height="2"/>
+                                                    <color key="backgroundColor" name="gray"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="2" id="6bR-yC-FFm"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="hli-xi-EpC" secondAttribute="bottom" id="N3N-gZ-fse"/>
+                                                <constraint firstAttribute="trailing" secondItem="hli-xi-EpC" secondAttribute="trailing" id="Q4g-17-OrF"/>
+                                                <constraint firstItem="BUP-ih-Pa6" firstAttribute="trailing" secondItem="Xza-Fh-ote" secondAttribute="trailingMargin" id="Qcs-tM-vBR"/>
+                                                <constraint firstItem="Axk-KQ-faa" firstAttribute="centerY" secondItem="Xza-Fh-ote" secondAttribute="centerY" id="XFB-4x-05i"/>
+                                                <constraint firstItem="BUP-ih-Pa6" firstAttribute="centerY" secondItem="Xza-Fh-ote" secondAttribute="centerY" id="fe7-ri-7mG"/>
+                                                <constraint firstItem="BUP-ih-Pa6" firstAttribute="leading" secondItem="Axk-KQ-faa" secondAttribute="trailing" constant="8" id="hNp-Qo-Smn"/>
+                                                <constraint firstItem="Axk-KQ-faa" firstAttribute="leading" secondItem="Xza-Fh-ote" secondAttribute="leadingMargin" id="shF-Th-yb2"/>
+                                                <constraint firstItem="hli-xi-EpC" firstAttribute="leading" secondItem="Xza-Fh-ote" secondAttribute="leading" id="uCY-jz-EnP"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="infoCell" rowHeight="58" id="cno-0h-ZoA">
+                                        <rect key="frame" x="0.0" y="88" width="390" height="58"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cno-0h-ZoA" id="Ntu-5C-s2M">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="58"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TO1-Ir-QR7">
+                                                    <rect key="frame" x="20" y="18.666666666666668" width="42" height="21.000000000000004"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Btn-GM-re9">
+                                                    <rect key="frame" x="20" y="56" width="370" height="2"/>
+                                                    <color key="backgroundColor" name="gray"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="2" id="pfE-7j-D8F"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ro-xF-foN">
+                                                    <rect key="frame" x="328" y="18.666666666666668" width="42" height="21.000000000000004"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemGrayColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Btn-GM-re9" secondAttribute="trailing" id="2GK-p3-dzf"/>
+                                                <constraint firstItem="1ro-xF-foN" firstAttribute="trailing" secondItem="Ntu-5C-s2M" secondAttribute="trailingMargin" id="34a-qb-5Iw"/>
+                                                <constraint firstAttribute="bottom" secondItem="Btn-GM-re9" secondAttribute="bottom" id="FwP-Sb-HDD"/>
+                                                <constraint firstItem="1ro-xF-foN" firstAttribute="centerY" secondItem="Ntu-5C-s2M" secondAttribute="centerY" id="Hel-VI-pST"/>
+                                                <constraint firstItem="TO1-Ir-QR7" firstAttribute="centerY" secondItem="Ntu-5C-s2M" secondAttribute="centerY" id="IgG-WS-NJg"/>
+                                                <constraint firstItem="TO1-Ir-QR7" firstAttribute="leading" secondItem="Ntu-5C-s2M" secondAttribute="leadingMargin" id="U7F-86-xbv"/>
+                                                <constraint firstItem="Btn-GM-re9" firstAttribute="leading" secondItem="Ntu-5C-s2M" secondAttribute="leadingMargin" id="WPt-Ia-rZT"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="59" id="gL7-3T-fQ7">
+                                        <rect key="frame" x="0.0" y="146" width="390" height="59"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gL7-3T-fQ7" id="3Nj-tV-3JH">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="59"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Закупки" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0u-2O-Jxs">
+                                                    <rect key="frame" x="20" y="19" width="71" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" name="gray"/>
+                                            <constraints>
+                                                <constraint firstItem="I0u-2O-Jxs" firstAttribute="leading" secondItem="3Nj-tV-3JH" secondAttribute="leadingMargin" id="EK8-m6-vW7"/>
+                                                <constraint firstItem="I0u-2O-Jxs" firstAttribute="centerY" secondItem="3Nj-tV-3JH" secondAttribute="centerY" id="qLK-6q-UrV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="rLk-U8-9wf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3hQ-Um-mdE" firstAttribute="top" secondItem="rLk-U8-9wf" secondAttribute="top" id="J3Q-fQ-rt4"/>
+                            <constraint firstItem="rLk-U8-9wf" firstAttribute="trailing" secondItem="3hQ-Um-mdE" secondAttribute="trailing" id="ckt-AF-wVz"/>
+                            <constraint firstItem="3hQ-Um-mdE" firstAttribute="leading" secondItem="rLk-U8-9wf" secondAttribute="leading" id="dHF-kE-Lmj"/>
+                            <constraint firstItem="rLk-U8-9wf" firstAttribute="bottom" secondItem="3hQ-Um-mdE" secondAttribute="bottom" id="nFR-cV-yXm"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="3hQ-Um-mdE" id="aq7-ce-dep"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rPM-rm-00f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="577" y="3899"/>
+        </scene>
         <!--Menu Hosting Controller-->
         <scene sceneID="Gya-o8-FEd">
             <objects>
